--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <style>
+      button { 
+        background-color: orange; 
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
-    <div>Style me via the external method!</div>
+    <div style="font-weight: bold; font-size: 32px; text-align: center; background-color: red; color: white;">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Method</button>
   </body>
